# appo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  mypy.ini  nginx.conf  pyproject.toml
.github/workflows/: cd-dev.yml  cd-prod.yml  ci-all.yml  ci-dev.yml  ci-prod.yml
appo_api/: config.py  exceptions.py  main.py
appo_api/app/: models.py
appo_api/app/admin/cruds/: login_crud.py
appo_api/app/admin/routers/: login_router.py
appo_api/app/admin/schemas/: login_schemas.py
appo_api/app/admin/services/: login_service.py
appo_api/app/common/: constants.py  schemas.py  utils.py
appo_api/app/landing/: models.py
appo_api/app/landing/cruds/: apt_crud.py  counsel_crud.py
appo_api/app/landing/routers/: apt_router.py  counsel_router.py
appo_api/app/landing/schemas/: apt_schema.py  counsel_schema.py
appo_api/app/landing/services/: apt_service.py  counsel_service.py
appo_api/core/: database.py  module.py  security.py
github/: pull_request_template.md
github/workflows/: ci-dev.yml  ci-main.yml  ci-prod.yml
