[tool.poetry]
name = "apt-landing"
version = "0.1.0"
description = ""
authors = ["Twenty-One-Do <dnjseh8962@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
gunicorn = "^23.0.0"
pydantic-settings = "^2.6.1"
mypy = "^1.13.0"
ruff = "^0.8.0"
pre-commit = "^4.0.1"
sqlalchemy = "^2.0.36"
pydantic = "^2.10.2"
alembic = "^1.14.0"
werkzeug = "^3.1.3"
mysqlclient = "^2.2.6"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = [
    "C",  # mccabe rules
    "F",  # pyflakes rules
    "E",  # pycodestyle error rules
    "W",  # pycodestyle warning rules
    "I",  # isort rules
]

[tool.ruff.format]
indent-style = "space"
quote-style = "single"